--- a/config/services.yaml
+++ b/config/services.yaml
@@ -22,3 +22,6 @@ services:
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
+    App\GraphQL\Resolver\CustomResolverMap:
+        tags:
+            - { name: overblog_graphql.resolver_map, schema: default }
